--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,24 +1,29 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/project
-    username: sa
-    password:
+    driver-class-name: ${DB_DRIVER:org.h2.Driver}
+    url: ${DB_URL:jdbc:h2:mem:test}
+    username: ${DB_USERNAME:sa}
+    password: ${DB_PASSWORD:}
 
   h2:
     console:
-      enabled: true
+      enabled: ${H2_CONSOLE_ENABLED:true}
       path: /h2-console
 
   jpa:
+    open-in-view: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: ${DDL_AUTO:update}
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+        dialect: ${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
+
+server:
+  port: ${SERVER_PORT:8080}
 
 jwt:
-  secret: ${JWT_SECRET}
-  access-expiration-ms: 900000
-  refresh-expiration-ms: 604800000
+  secret: ${JWT_SECRET:test-secret}
+  access-expiration-ms: ${JWT_ACCESS_EXPIRATION_MS:900000}
+  refresh-expiration-ms: ${JWT_REFRESH_EXPIRATION_MS:604800000}
