--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,35 +3,52 @@ version: 0.2
 env:
   variables:
     AWS_REGION: us-east-1
-    ECR_REPO: a081004-repo
     ACCOUNT_ID: 416225317325
+    ECR_REPO: a081004-repo
+    EKS_CLUSTER_NAME: AIVLE-Class1-Group1-Cluster
+    CONTAINER_NAME: a081004-app
+    DEPLOYMENT_NAME: a081004-app
 
 phases:
   install:
     runtime-versions:
       java: corretto17
+      docker: 20
     commands:
-      - echo "▶ Install phase started"
+      - echo "▶ Install phase"
       - chmod +x ./gradlew
+
+      - echo "▶ Install kubectl"
+      - curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.34.2/2025-01-01/bin/linux/amd64/kubectl
+      - chmod +x kubectl
+      - mv kubectl /usr/local/bin/
 
   pre_build:
     commands:
-      - echo "▶ Pre-build phase started"
+      - echo "▶ Build Spring Boot JAR"
       - ./gradlew clean build -x test
-      - aws --version
+
+      - echo "▶ Login to ECR"
       - aws ecr get-login-password --region $AWS_REGION |
-        docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com
+
+      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_URI=${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG
 
   build:
     commands:
-      - echo "▶ Docker build started"
-      - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER
-      - docker build -t $ECR_REPO:$IMAGE_TAG .
-      - docker tag $ECR_REPO:$IMAGE_TAG $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG
-      - docker tag $ECR_REPO:$IMAGE_TAG $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
+      - echo "▶ Docker build & Push"
+      - docker build -t $IMAGE_URI .
+      - docker tag $IMAGE_URI ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
+      - docker push ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
+      - docker push $IMAGE_URI
 
   post_build:
     commands:
-      - echo "▶ Build completed successfully"
-      - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG
-      - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
+      - echo "▶ Update kubeconfig"
+      - aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
+
+      - echo "▶ Deploy to EKS"
+      - kubectl set image deployment/$DEPLOYMENT_NAME $CONTAINER_NAME=$IMAGE_URI
+
+      - kubectl rollout status deployment/$DEPLOYMENT_NAME
