--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,9 +18,10 @@ phases:
       - chmod +x ./gradlew
 
       - echo "▶ Install kubectl"
-      - curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.34.2/2025-01-01/bin/linux/amd64/kubectl
+      - curl -LO https://dl.k8s.io/release/v1.34.2/bin/linux/amd64/kubectl
       - chmod +x kubectl
-      - mv kubectl /usr/local/bin/
+      - mv kubectl /usr/local/bin/kubectl
+      - kubectl version --client
 
   pre_build:
     commands:
@@ -39,8 +40,9 @@ phases:
       - echo "▶ Docker build & Push"
       - docker build -t $IMAGE_URI .
       - docker tag $IMAGE_URI ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
-      - docker push ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
       - docker push $IMAGE_URI
+      - docker push ${ACCOUNT_ID}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:latest
+
 
   post_build:
     commands:
@@ -49,5 +51,4 @@ phases:
 
       - echo "▶ Deploy to EKS"
       - kubectl set image deployment/$DEPLOYMENT_NAME $CONTAINER_NAME=$IMAGE_URI
-
       - kubectl rollout status deployment/$DEPLOYMENT_NAME
